# bralma_NLP

./: .gitignore  Fronted.py  Frontend.py  README.md  agent_orchestrator.py  codebase_documentation.md  crewai_wrapper.py  groq.py  groq_answer_llm.py  groq_llm.py  groq_quiz_llm.py  langchain_agent.py  project_analysis_report.md  rag_agent.py  requirements.txt  run_code_analysis.py
bralma_crewai/: .gitignore  README.md  pyproject.toml  requirements.txt
bralma_crewai/.venv_crewai/: pyvenv.cfg
bralma_crewai/src/ai_development/: crew.py  main.py
bralma_crewai/src/ai_development/config/: agents.yaml  tasks.yaml
bralma_crewai/src/ai_development/tools/: code_analyzer.py  pdf_tools.py
bralma_crewai/src/bralma_crewai/: __init__.py  crew.py  main.py
bralma_crewai/src/bralma_crewai/config/: agents.yaml  tasks.yaml
bralma_crewai/src/bralma_crewai/tools/: __init__.py  pdf_tools.py
