[project]
name = "bralma_crewai"
version = "0.1.0"
description = "Code Analysis Crew using CrewAI with Groq LLM"
authors = [{ name = "Alex Hendrickx" }, { name = "Brent Paessens" }, {name = "Mauro Leonardo" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1",
    "python-dotenv>=1.1.1",
    "groq>=0.37.1"
]

[project.scripts]
ai_development = "bralma_crewai.main:run"
run_crew = "bralma_crewai.main:run"
train = "bralma_crewai.main:train"
replay = "bralma_crewai.main:replay"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
